feat. modify impl by AI again