@@ -1,88 +1,111 @@
 package com.nona.changeTracking.domain.model.changeset;
 
-import lombok.AccessLevel;
-import lombok.AllArgsConstructor;
-import lombok.EqualsAndHashCode;
-import lombok.Getter;
-
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 /**
- * 一个顶层值对象，封装了一次变更检测操作后产生的所有结果。
+ * 代表一个工作单元内所有变更的集合。
  * <p>
- * 它包含了被识别为“新”（New）、“脏”（Dirty）和“已移除”（Removed）的对象集合。
- * 这个对象是不可变的，一旦创建，其内容就不能被修改。
- * <p>
- * 此类使用 Lombok 的注解来生成大部分样板代码，但手动实现了 {@code toString()} 方法，
- * 以提供一个更简洁、对日志更友好的输出。
+ * 这是框架最终输出的顶层值对象。它提供了获取不同粒度变更视图的方法。
+ *
+ * @param changes -- GETTER --
+ *                获取所有被追踪对象的变更列表。
  */
-@AllArgsConstructor(access = AccessLevel.PRIVATE)
-@Getter
-@EqualsAndHashCode
-public final class ChangeSet {
-
-    private final List<Object> newObjects;
-    private final List<ObjectChange> dirtyObjects;
-    private final List<Object> removedObjects;
+public record ChangeSet(List<ObjectChange> changes) {
 
     /**
-     * 创建一个空的 ChangeSet 实例。
+     * 构造一个 ChangeSet。
      *
-     * @return 一个不包含任何变更的 ChangeSet。
+     * @param changes 包含所有对象变更的列表。
      */
-    public static ChangeSet empty() {
-        return new ChangeSet(List.of(), List.of(), List.of());
+    public ChangeSet(final List<ObjectChange> changes) {
+        this.changes = List.copyOf(Objects.requireNonNull(changes, "Changes list cannot be null."));
     }
 
     /**
-     * 静态工厂方法，用于创建 ChangeSet 的新实例。
+     * 获取所有变更的扁平化列表，包括容器变更（如对象、列表本身的变化）和叶子变更（字段变化、项目增删）。
      * <p>
-     * 这个方法是创建 ChangeSet 的首选方式，因为它能确保内部集合的不可变性。
+     * 这个视图适用于需要了解变更层级结构的场景，如审计日志。
      *
-     * @param newObjects     新追踪的（"New"）对象列表。
-     * @param dirtyObjects   状态被修改的（"Dirty"）对象的变更详情列表。
-     * @param removedObjects 被标记为移除的（"Removed"）对象列表。
-     * @return 一个新的、不可变的 ChangeSet 实例。
+     * @return 所有变更的列表。
      */
-    public static ChangeSet of(
-            final List<Object> newObjects,
-            final List<ObjectChange> dirtyObjects,
-            final List<Object> removedObjects) {
-        Objects.requireNonNull(newObjects, "New objects list cannot be null.");
-        Objects.requireNonNull(dirtyObjects, "Dirty objects list cannot be null.");
-        Objects.requireNonNull(removedObjects, "Removed objects list cannot be null.");
-
-        return new ChangeSet(
-                List.copyOf(newObjects),
-                List.copyOf(dirtyObjects),
-                List.copyOf(removedObjects)
-        );
+    public List<Change> getAllChanges() {
+        final List<Change> allChanges = new ArrayList<>();
+        for (final ObjectChange objectChange : this.changes) {
+            collectAllChanges(objectChange.changeTree(), allChanges);
+        }
+        return Collections.unmodifiableList(allChanges);
     }
 
     /**
-     * 检查此变更集是否不包含任何变更。
+     * 只获取最细粒度的、可直接执行的“叶子”变更（字段值的具体变化、集合中项目的增删）。
+     * <p>
+     * 这个视图适用于需要将变更转换为持久化操作（如 UPDATE, INSERT, DELETE）的场景。
      *
-     * @return 如果所有列表都为空，则返回 true，否则返回 false。
+     * @return 最细粒度变更的列表。
+     */
+    public List<Change> getLeafChanges() {
+        final List<Change> leafChanges = new ArrayList<>();
+        for (final ObjectChange objectChange : this.changes) {
+            collectLeafChanges(objectChange.changeTree(), leafChanges);
+        }
+        return Collections.unmodifiableList(leafChanges);
+    }
+
+    /**
+     * 检查此变更集是否为空。
+     *
+     * @return 如果没有任何变更，则为 true。
      */
     public boolean isEmpty() {
-        return newObjects.isEmpty() && dirtyObjects.isEmpty() && removedObjects.isEmpty();
+        return changes.isEmpty();
     }
 
-    /**
-     * 返回此 ChangeSet 的字符串表示形式。
-     * <p>
-     * 为了避免在日志中输出大量数据，此实现只包含每个集合的大小，
-     * 而不是集合的实际内容。
-     *
-     * @return ChangeSet 的简洁字符串表示。
-     */
-    @Override
-    public String toString() {
-        return "ChangeSet{" +
-               "newObjects=" + newObjects.size() +
-               ", dirtyObjects=" + dirtyObjects.size() +
-               ", removedObjects=" + removedObjects.size() +
-               '}';
+    // --- 递归辅助方法 ---
+
+    private void collectAllChanges(final ChangeNode node, final List<Change> accumulator) {
+        // 跳过没有路径的根节点
+        if (!node.path().isEmpty()) {
+            accumulator.add(toChange(node, true));
+        }
+
+        if (node instanceof ContainerChangeNode container) {
+            for (final ChangeNode child : container.children()) {
+                collectAllChanges(child, accumulator);
+            }
+        }
+    }
+
+    private void collectLeafChanges(final ChangeNode node, final List<Change> accumulator) {
+        if (node instanceof ContainerChangeNode container) {
+            for (final ChangeNode child : container.children()) {
+                collectLeafChanges(child, accumulator);
+            }
+        } else {
+            // 所有非 ContainerNode 都是叶子节点
+            accumulator.add(toChange(node, false));
+        }
+    }
+
+    private Change toChange(final ChangeNode node, boolean deep) {
+        if (node instanceof FieldChangeNode fcn) {
+            return new FieldChange(fcn.path(), fcn.oldValue(), fcn.newValue());
+        }
+        if (node instanceof ItemAddedNode ian) {
+            return new ItemAddedChange(ian.path(), ian.addedItem());
+        }
+        if (node instanceof ItemRemovedNode irn) {
+            return new ItemRemovedChange(irn.path(), irn.removedItem());
+        }
+        if (node instanceof ContainerChangeNode ccn) {
+            final List<Change> children = deep
+                    ? ccn.children().stream().map(child -> toChange(child, true)).collect(Collectors.toList())
+                    : Collections.emptyList();
+            return new ContainerChange(ccn.path(), children);
+        }
+        throw new IllegalStateException("Unknown ChangeNode type: " + node.getClass());
     }
 }
